<resources>
    <string name="app_name">NearShare</string>
    <string name="action_settings">Settings</string>
    <string name="select_device">Select device</string>
    <string name="ellipses" translatable="false">&#8230;</string>
    <string name="heading_remote_systems">Discovered devices</string>
    <string name="uri_to_send">Send Uri</string>
    <string name="send_file_text">Send file(s)</string>
    <string name="cancel">Cancel</string>
    <string name="proximalonly">Proximal discovery</string>
    <string name="file_to_send">Send File</string>
    <string name="choose_file">Choose File</string>
    <string name="select_files">Selected file(s)</string>
    <string name="content">Content</string>
    <string name="send_uri_text">Send Uri</string>
    <string name="microsoft_account">Microsoft Account</string>
</resources>
