<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/selectedDeviceControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSelectDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_device"
                    android:textSize="@dimen/heading_size"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkProximalDiscovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/proximalonly" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/listDevices"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="@dimen/fab_margin">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listRemoteSystems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    tools:listSelector="@color/invertedBackground" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/sendUriControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelSendUri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uri_to_send"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:typeface="normal"
                    tools:layout_centerInParent="false" />

                <EditText
                    android:id="@+id/txtUri"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:scrollbars="none"
                    android:singleLine="true"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chooseFilesControls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelSendFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_to_send"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:typeface="normal"
                    tools:layout_centerInParent="false" />

                <Button
                    android:id="@+id/btnChooseFileUri"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:scrollbars="none"
                    android:singleLine="true"
                    android:text="@string/choose_file" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sendFilesControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin">

                <Button
                    android:id="@+id/btnSendUri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uri_to_send"
                    android:textSize="@dimen/btn_text_size" />

                <Button
                    android:id="@+id/btnSendFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/btn_margin"
                    android:text="@string/send_file_text"
                    android:textSize="@dimen/btn_text_size" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/btn_margin"
                    android:enabled="false"
                    android:text="@string/cancel"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
